--- a/website/stories/side/read/template.html
+++ b/website/stories/side/read/template.html
@@ -199,7 +199,8 @@
             <a href="./{{PREV}}">{{PREV-SVG}}{{PREV-TEXT}}</a>
             <a href="./{{NEXT}}">{{NEXT-TEXT}}{{NEXT-SVG}}</a>
         </div>
-        
+        <div><script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="361591"></script>
+        </div>
         <div class="giscus" id="comments">
         </div>
     </div>
