--- a/website/stories/side/read/template.html
+++ b/website/stories/side/read/template.html
@@ -199,8 +199,9 @@
             <a href="./{{PREV}}">{{PREV-SVG}}{{PREV-TEXT}}</a>
             <a href="./{{NEXT}}">{{NEXT-TEXT}}{{NEXT-SVG}}</a>
         </div>
-        <div><script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="361591"></script>
-        </div>
+        <div data-banner-id="6087199"></div>
+        <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="361591"></script>
+        
         <div class="giscus" id="comments">
         </div>
     </div>
