--- a/website/stories/side/read/template.html
+++ b/website/stories/side/read/template.html
@@ -199,7 +199,7 @@
             <a href="./{{PREV}}">{{PREV-SVG}}{{PREV-TEXT}}</a>
             <a href="./{{NEXT}}">{{NEXT-TEXT}}{{NEXT-SVG}}</a>
         </div>
-        <div>
+        <div class="evadav">
             <script async src="https://curoax.com/na/waWQiOjEyMDgxOTAsInNpZCI6MTU0NTQzOSwid2lkIjo3MjAwMjksInNyYyI6Mn0=eyJ.js"></script>
         </div>
         <div class="giscus" id="comments">
