--- a/website/stories/orv/read/template.html
+++ b/website/stories/orv/read/template.html
@@ -199,6 +199,9 @@
             <a href="./{{PREV}}">{{PREV-SVG}}{{PREV-TEXT}}</a>
             <a href="./{{NEXT}}">{{NEXT-TEXT}}{{NEXT-SVG}}</a>
         </div>
+         <div class="evadav">
+            <script async src="https://curoax.com/na/waWQiOjEyMDgxOTAsInNpZCI6MTU0NTQzOSwid2lkIjo3MjAwMjksInNyYyI6Mn0=eyJ.js"></script>
+         </div>
         <div class="giscus" id="comments">
         </div>
     </div>
