--- a/website/stories/cont/read/template.html
+++ b/website/stories/cont/read/template.html
@@ -200,7 +200,16 @@
             <a href="./{{NEXT}}">{{NEXT-TEXT}}{{NEXT-SVG}}</a>
         </div>
          <div class="evadav">
-            <script async src="https://curoax.com/na/waWQiOjEyMDgxOTAsInNpZCI6MTU0NTQzOSwid2lkIjo3MjAwMjksInNyYyI6Mn0=eyJ.js"></script>
+              <script type="text/javascript">
+	atOptions = {
+		'key' : '93e4d801daeecc64c1ba4bb99dc03a38',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/93e4d801daeecc64c1ba4bb99dc03a38/invoke.js"></script>       
          </div>
         <div class="giscus" id="comments">
         </div>
