--- a/website/stories/orv/read/template.html
+++ b/website/stories/orv/read/template.html
@@ -200,8 +200,17 @@
             <a href="./{{NEXT}}">{{NEXT-TEXT}}{{NEXT-SVG}}</a>
         </div>
          <div class="evadav">
-            <script async src="https://curoax.com/na/waWQiOjEyMDgxOTAsInNpZCI6MTU0NTQzOSwid2lkIjo3MjAwMjksInNyYyI6Mn0=eyJ.js"></script>
-         </div>
+             <script type="text/javascript">
+	atOptions = {
+		'key' : '73a8d8ebbe401d2fede30e5118e74c00',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/73a8d8ebbe401d2fede30e5118e74c00/invoke.js"></script>
+        </div>
         <div class="giscus" id="comments">
         </div>
     </div>
