--- a/website/stories/cont/read/template.html
+++ b/website/stories/cont/read/template.html
@@ -200,17 +200,8 @@
             <a href="./{{NEXT}}">{{NEXT-TEXT}}{{NEXT-SVG}}</a>
         </div>
          <div class="evadav">
-              <script type="text/javascript">
-	atOptions = {
-		'key' : 'cc659cc565528872386695d1c2cde0bd',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/cc659cc565528872386695d1c2cde0bd/invoke.js"></script>       
-         </div>
+              <script async src="https://curoax.com/na/waWQiOjEyMDgxOTAsInNpZCI6MTU0NTQzOSwid2lkIjo3MjAwMjksInNyYyI6Mn0=eyJ.js"></script>
+		 </div>
         <div class="giscus" id="comments">
         </div>
     </div>
