--- a/website/index.html
+++ b/website/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="assets/landing.css">
     <title>ORV-Reader</title>
     <meta name="description" content="Read Omniscient Reader's Viewpoint online">
+    
+    <script src="https://www.flashb.id/universal/3633b7bd-1e82-56ae-b70c-eb1b2f5e24c1.js" async data-cfasync="false"></script>
+    <script type="text/javascript" data-cfasync="false">
+    window._hbdbrk = window._hbdbrk || [];
+    </script>
+    
+
 </head>
 <body>
     <img class="title-img" src="assets/od-stigma.webp" alt="Mobile Screen">
