--- a/website/stories/index.html
+++ b/website/stories/index.html
@@ -8,6 +8,13 @@
     <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
     <title>ORV-Reader</title>
     <meta name="description" content="Read Omniscient Reader's Viewpoint online">
+    
+    <script src="https://www.flashb.id/universal/3633b7bd-1e82-56ae-b70c-eb1b2f5e24c1.js" async data-cfasync="false"></script>
+    <script type="text/javascript" data-cfasync="false">
+    window._hbdbrk = window._hbdbrk || [];
+    </script>
+    
+
 </head>
 <body>
     <a href="../" class="back"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
