--- a/website/stories/cont/read/template.html
+++ b/website/stories/cont/read/template.html
@@ -206,6 +206,7 @@
             <a href="./{{NEXT}}">{{NEXT-TEXT}}{{NEXT-SVG}}</a>
         </div>
          <div class="evadav">
+         </div>
            
         <div class="giscus" id="comments">
         </div>
