--- a/website/stories/orv/read/ch_321.html
+++ b/website/stories/orv/read/ch_321.html
@@ -307,7 +307,7 @@
 <p class="orv_line">"Somehow it will work out. By the way, don't you have someone to meet here?"</p>
 <p class="orv_line">Yoo Joonghyuk stared at me as he wondered how I knew. If my memories were correct, it was the existence who taught Giant Body Transformation to the former Yoo Joonghyuk.</p>
 <p class="orv_line">"I have someone to meet. I have to recruit him as a colleague."</p>
-<p class="orv_line">Colleague?"</p>
+<p class="orv_line">"Colleague?"</p>
 <p class="orv_line">"Originally, I would've never made him a companion but I changed my mind."</p>
 <p class="orv_line">We stopped at the same time. We had to stop. Something huge was blocking our way.</p>
 <p class="orv_line">"…By colleague, do you mean the one talking to the dog?"</p>
