--- a/website/stories/orv/read/ch_325.html
+++ b/website/stories/orv/read/ch_325.html
@@ -299,8 +299,8 @@
 <p class="orv_line">Han Sooyoung watched the ancient hero speaking like a dokkaebi and smiled bitterly.</p>
 <p class="orv_line">'They won't use a dokkaebi for the reputation of the nebula'.</p>
 <p class="orv_line">Of course, they couldn't exercise the authority of a dokkaebi by doing this but the performance was enough to stimulate the participants.</p>
-<div class="orv_constellation"><p>[Is that all? You can also gain a stake in the giant story thought the 'giant hunting' event.]</p></div>
-<p class="orv_line">'Some incarnations and constellations cheered at the words 'stake in a giant story'.</p>
+<div class="orv_constellation"><p>[Is that all? You can also gain a stake in the giant story through the 'giant hunting' event.]</p></div>
+<p class="orv_line">'Some incarnations and constellations cheered at the words stake in a giant story'.</p>
 <p class="orv_line">Achilles laughed and declared.</p>
 <div class="orv_constellation"><p>[Then let's start the game.]</p></div>
 <p class="orv_line">At the same time, the main hall of the theme park started to open. The sealed sphere opened and a pale light poured from the air.</p>
