--- a/website/stories/orv/read/ch_328.html
+++ b/website/stories/orv/read/ch_328.html
@@ -216,9 +216,9 @@
 <div class="orv_constellation"><p>[Very noisy. Do dokkaebis normally talk like this?]</p></div>
 <p class="orv_line">The red wine in the glass was sucked into the man's mouth. Then one of the heroes of Olympus died on the screen.</p>
 <div class="orv_system"><p>[The constellation 'God of Wine and Ecstasy' is cheering!]</p></div>
-<div class="orv_system"><p>[The constellation 'God of Wine and Ecstasy' has sponsored 3,000 cons to the 'Demon King of Salvation'.]</p></div>
+<div class="orv_system"><p>[The constellation 'God of Wine and Ecstasy' has sponsored 3,000 coins to the 'Demon King of Salvation'.]</p></div>
 <p class="orv_line">At this absurd sight, Bihyung asked, "Aren't you a member of Olympus? Can you be sitting here leisurely?"</p>
-<div class="orv_constellation"><p>[What do you know? I'm not really close to them. In addition, aren't you the ones who said I can take a tour today?]</p></div>
+<div class="orv_constellation"><p>[What do you know? I'm not really close to them. In addition, aren't you the one who said I can take a tour today?]</p></div>
 <p class="orv_line">Like any supporter on the street, Dionysus had a flag with his team on his back. The flag was covered with 'Olympus is doomed'.</p>
 <p class="orv_line">Dokgak's eyes narrowed. "The 12 Gods of Olympus would've gathered at Olympus Temple by now."</p>
 <div class="orv_constellation"><p>[I want Kim Dokja to win.]</p></div>
