--- a/website/stories/orv/read/ch_329.html
+++ b/website/stories/orv/read/ch_329.html
@@ -204,7 +204,7 @@
 <p class="orv_line">Demon King of Salvation. Some of the incarnations and constellations who heard my modifier immediately responded. "Is it the Demon King's Selection…?"</p>
 <p class="orv_line">"T-The demon king who knocked down Surya!"</p>
 <p class="orv_line">The man with the big spear came forward and said.</p>
-<div class="orv_constellation"><p>[I am called 'Protector of Changban.]</p></div>
+<div class="orv_constellation"><p>[I am called 'Protector of Changban'.]</p></div>
 <p class="orv_line">"Protector of Changban! It is Zhang Fei!"</p>
 <p class="orv_line">Zhang Fei struck his massive chest. </p>
 <div class="orv_constellation"><p>[I want to help you. I didn't want to play this childish game but now I'm getting heated up!]</p></div>
