--- a/website/stories/orv/read/ch_331.html
+++ b/website/stories/orv/read/ch_331.html
@@ -233,7 +233,8 @@
 <p class="orv_line">Steel Transformation. It was the stigma of a constellation from a distant place in the universe.</p>
 <p class="orv_line">As the stories piled up, it became harder than any metal and had the advantage of being capable of regenerating if broken. Lee Hyunsung was no different from a living 'strongest sword'.</p>
 <div class="orv_system"><p>[The constellation 'Master of Steel' is frowning at your cruelty.]</p></div>
-<p class="orv_line">Perhaps it was because this was his first time being a sword but Lee Hyunsung was still in an insecure state. I deliberately spoke in order to inspire Lee Hyunsung's morale. [Hyunsung-ssi, do you see the shield that Heracles' is holding?]</p>
+<p class="orv_line">Perhaps it was because this was his first time being a sword but Lee Hyunsung was still in an insecure state. I deliberately spoke in order to inspire Lee Hyunsung's morale. </p>
+<div class="orv_constellation"><p>[Hyunsung-ssi, do you see the shield that Heracles is holding?]</p></div>
 <p class="orv_line">"Ye… y-yes, what is that?"</p>
 <div class="orv_constellation"><p>[It is the original version of 'Heracles Shield' that I gave you before.]</p></div>
 <p class="orv_line">In the past, I had given the replica version of Heracles' Shield to Lee Hyunsung. It was the shield that Lee Hyunsung kept cleaning.</p>
@@ -264,9 +265,10 @@
 <div class="orv_constellation"><p>[My colleague is dying because of you guys.]</p></div>
 <div class="orv_constellation"><p>[Colleague?]</p></div>
 <p class="orv_line">The sword and the club hit each other again as Ares seemed to remember something.</p>
-<div class="orv_system"><p>[The incarnation who used to be the singularity watcher.]</p></div>
+<div class="orv_constellation"><p>[The incarnation who used to be the singularity watcher.]</p></div>
 <div class="orv_constellation"><p>[It isn't an incarnation but 'Yoo Sangah'.]</p></div>
-<div class="orv_constellation"><p>[We didn't make the incarnation do that. She brought that misery onto herself. Ares laughed.]</p></div>
+<div class="orv_constellation"><p>[We didn't make the incarnation do that. She brought that misery onto herself.]</p></div>
+<p class="orv_line">Ares laughed.</p>
 <div class="orv_constellation"><p>[The mortal tried to access Olympus' database. It is natural to suffer.]</p></div>
 <p class="orv_line">I shouted through gritted teeth,</p>
 <div class="orv_constellation"><p>[It is you who gave her that strength. You brought about such a situation.]</p></div>
@@ -305,7 +307,8 @@
 <p class="orv_line">Then a tremendous explosion occurred.</p>
 <p class="orv_line">"Kim Namwoon!"</p>
 <p class="orv_line">I emerged from Pluto's cockpit at the moment of the explosion. Pluto had exceeded the limits of probability and was breaking down.</p>
-<div class="orv_constellation"><p>[This dog…! Kim Namwoon sounded happy.]</p></div>
+<div class="orv_constellation"><p>[This dog…!]</p></div>
+<p class="orv_line">Kim Namwoon sounded happy.</p>
 <p class="orv_line">After a while, Pluto's body couldn't withstand the probability storm and collapsed. It was the result of taking the probability on my behalf.</p>
 <p class="orv_line">Fortunately, the power supply seemed safe. It was just that more fighting would be difficult.</p>
 <p class="orv_line">In the haze of the smoke, I saw Ares who escaped from the cockpit like me. Ares was wounded all over his body and he was roaring furiously.</p>
