--- a/website/stories/orv/read/ch_319.html
+++ b/website/stories/orv/read/ch_319.html
@@ -246,7 +246,7 @@
 <p class="orv_line">"Conditions. Do you want to add more to the bet?"</p>
 <p class="orv_line">"The coins are only that much. I would like to add one more condition."</p>
 <p class="orv_line">"One more condition…?"</p>
-<p class="orv_line">"If I win, release the Lord and Vassal Pledge hanging on Selena King."</p>
+<p class="orv_line">"If I win, release the Lord and Vassal Pledge hanging on Selena Kim."</p>
 <div class="orv_system"><p>[The constellation 'Friend of Justice and Harmony' is shocked by your words.]</p></div>
 <div class="orv_system"><p>[The constellation 'Demon-like Judge of Fire' is nodding at your words.]</p></div>
 <p class="orv_line">Selena Kim's eyes shook. Perhaps Selena Kim had been bound during the Proof of the Stars before coming to the Context of the Constellations. There was no way Anna Croft would have someone beside her that she couldn't control.</p>
