--- a/website/stories/orv/read/ch_320.html
+++ b/website/stories/orv/read/ch_320.html
@@ -195,7 +195,7 @@
         <div class="title_mobile"><img src="../../../../assets/od-stigma.webp" alt="title mobile"></div>
         <article class="orv_main">
             <div class="orv_title"><h1>Ch 320: Ep. 60 - Taste of Ruin, V</h1></div>
-<p class="orv_line">"Demon King of Salvation, what are you doing? Go and take the coin." Anna Croft spoke provocatively. "Or maybe it wouldn't be too bad to admit defeat neatly.</p>
+<p class="orv_line">"Demon King of Salvation, what are you doing? Go and take the coin." Anna Croft spoke provocatively. "Or maybe it wouldn't be too bad to admit defeat neatly."</p>
 <p class="orv_line">I slowly looked around at the constellations in the audience and then Phobos in front of me. The information of Ways of Survival passed through my head.</p>
 <div class="orv_quote"><p>「 The nebula that exerts the greatest power in the Context of the Constellations is Olympus. The nebula maximizes its power in certain areas and the most representative one is the auction house. 」</p></div>
 <p class="orv_line">This was why Anna Croft could be so relaxed. The biggest event that could be reached through the Context of the Constellations was Gigantomachia. Thus, the organizer Olympus was the force with the strongest influence.</p>
@@ -248,7 +248,7 @@
 <p class="orv_line">The dejected constellations of Olympus stared at me and stepped back.</p>
 <div class="orv_system"><p>[You have committed a criminal act in Olympus's legal zone!]</p></div>
 <p class="orv_line">The probability restraint didn't act immediately. I activated Way of the Wind and jumped into the air, snatching the coin.</p>
-<div class="orv_system"><p>[1,00,000 coins have been acquired as a scenario reward.]</p></div>
+<div class="orv_system"><p>[1,000,000 coins have been acquired as a scenario reward.]</p></div>
 <p class="orv_line">At the same time, system messages poured out.</p>
 <div class="orv_system"><p>[The sub scenario ― Entertainment of Ruin has ended.]</p></div>
 <div class="orv_system"><p>[The constellation 'Prisoner of the Golden Headband' is cheering!]</p></div>
