--- a/website/stories/orv/read/ch_326.html
+++ b/website/stories/orv/read/ch_326.html
@@ -309,7 +309,7 @@
 <p class="orv_line">The next moment, the sparks of probability appeared around Lee Sookyung's body. Her bones were crumbling and her skin was burnt. Amidst this pain, the hand holding the sword became heavy.</p>
 <p class="orv_line">The force of wind that a human couldn't endure was nestled in her right hand. This was one of the strongest constellations on the Korean Peninsula, the power of Pungbaek.</p>
 <p class="orv_line">From left to right, Lee Sookyung swung her sword. Then the space was split apart. It was as if the world was split in half from the beginning. Everything around her was torn by the absolute wind pressure that followed the trajectory of her sword.</p>
-<p class="orv_line">"Wh, at…?"</p>
+<p class="orv_line">"What…?"</p>
 <p class="orv_line">10, 20, 30… the number of returnees who died quickly surpassed 100. All the returnees who crossed the walls were falling through the air with their waist cut. Their faces showed they didn't understand the source of their death.</p>
 <p class="orv_line">Lee Sookyung held her trembling right hand and took shaky breaths. In one blow, most of the returnees were destroyed. Of course, it wasn't everyone.</p>
 <p class="orv_line">There were returnees who noticed the danger in the short time and moved out of range. They were masters from the Third Murim and Fourth Murim.</p>
