--- a/website/stories/orv/read/ch_332.html
+++ b/website/stories/orv/read/ch_332.html
@@ -250,7 +250,8 @@
 <div class="orv_system"><p>[The constellation 'Spokesman of Justice and Wisdom' is astonished!]</p></div>
 <div class="orv_system"><p>[The constellation 'Almighty Sun' distrusts his eyes.]</p></div>
 <p class="orv_line">The battlefield became a crucible of confusion. It was the same for the heroes fighting in Olympus' camp and the giants fighting against them. Even those watching the battlefield were included. The fact that the war god of Olympus abandoned the scenario was a big shock.</p>
-<div class="orv_constellation"><p>[Hahahahaha! This time Gigantomachia is really interesting! Zhang Fei's true voice rang out as he crossed the battlefield and dealt with the heroes.]</p></div>
+<div class="orv_constellation"><p>[Hahahahaha! This time Gigantomachia is really interesting!]</p></div>
+<p class="orv_line">Zhang Fei's true voice rang out as he crossed the battlefield and dealt with the heroes.</p>
 <p class="orv_line">Yoo Joonghyuk didn't care about the turmoil and was searching through the rubble of the dead Ares. "He really doesn't have Nectar. Then I must kill Hebe…"</p>
 <p class="orv_line">"Yoo Joonghyuk, you crazy bastard!" I grabbed Yoo Joonghyuk by the collar and shouted.</p>
 <p class="orv_line">"What are you doing? You would've killed him if I hadn't."</p>
