--- a/website/stories/index.html
+++ b/website/stories/index.html
@@ -19,7 +19,7 @@
 <div class="cards">
     <a href="./orv/"><div class="card"><img src="../assets/covers/orv.webp" alt=""><p>ORV</p></div></a>
     <a href="./cont/"><div class="card"><img src="../assets/covers/cont.webp" alt=""><p>ORV Sequel (CH 553+)</p></div></a>
-    <a href="./side/"><div class="card"><img src="../assets/covers/side.webp" alt=""><p>One Shot Stories</p></div></a>
+    <a href="./side/"><div class="card"><img src="../assets/covers/side.webp" alt=""><p>One Short Stories</p></div></a>
 </div>
 
 </body>
