--- a/website/support.html
+++ b/website/support.html
@@ -142,8 +142,8 @@
             <p>You can directly send gift cards to me via Discord <a href="https://discord.gg/wsRTfQm8" target="_blank" class="contact-link">@bittu5134</a> or email <a href="mailto:ssr7a5134@gmail.com" class="contact-link">ssr7a5134@gmail.com</a>.</p>
             <p>Accepted gift cards:</p>
             <ul class="giftcards-list">
-                <li><a href="https://www.eneba.com/store/eneba-gift-cards" target="_blank">Eneba Wallet</a></li>
-                <li><a href="https://www.eneba.com/store/all?text=amazon%20gift%20card%20india" target="_blank">Amazon Wallet</a></li>
+                <li><a href="https://www.eneba.com/store/eneba-gift-cards" target="_blank">Eneba Wallet (preferred)</a></li>
+                <li><a href="https://www.eneba.com/store/all?text=amazon%20gift%20card%20india" target="_blank">Amazon Wallet (preferred)</a></li>
                 <li><a href="https://www.eneba.com/store/all?text=amazon%20voucher%20india" target="_blank">Amazon Voucher</a></li>
                 <li>Game Keys</li>
                 <li>Other gift cards</li>
